# Process this file with autoconf to produce a configure script.
AC_INIT(smooth_style.c)
THEME="smooth"

# Save this value here, since automake will set cflags later

# For automake.
VERSION=0.5.6
PACKAGE=gtk-${THEME}-engine

# Save this value here, since automake will set cflags later
cflags_set=${CFLAGS+set}
AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

AC_CANONICAL_HOST

AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# No static please
AM_DISABLE_STATIC

dnl Initialize libtool
AM_PROG_LIBTOOL

AC_ARG_ENABLE(gtk-1, [  --enable-gtk-1		try to compile for GTK+ 1.X], gtk_1=$enableval, gtk_1="no")
AC_ARG_ENABLE(gtk-2, [  --enable-gtk-2		try to compile for GTK+ 2.X], gtk_2=$enableval, gtk_2="yes")
AC_ARG_ENABLE(local-install, [  --enable-local-install		try to install local for the user, instead of system wide] , local_install=$enableval, local_install="no")
AC_ARG_WITH(gtk, [  --with-gtk=DIR          where to find GTK+], prefix=$withval)

if test $gtk_1 = "yes"; then
  gtk_config_progs="gtk-config gtk12-config"
  AC_PATH_PROGS(gtk_config, $gtk_config_progs, no, $prefix/bin)
  if test $gtk_config = "no"; then
    AC_MSG_ERROR(Could not find installation of GTK+. Try ./configure --help)  
  fi

  AC_PATH_PROGS(gdk_pixbuf_config, "gdk-pixbuf-config", no, $prefix/bin)
  if test $gdk_pixbuf_config = "no"; then
    AC_MSG_ERROR(Could not find installation of GDK-Pixbuf. Try ./configure --help)  
  fi

  GTK_VERSION=`$gtk_config --version`
  SMOOTH_GTK1_CFLAGS=`$gdk_pixbuf_config --cflags` 
  SMOOTH_GTK1_LIBS=`$gdk_pixbuf_config --libs`

  if test $local_install = "yes"; then
    SMOOTH_GTK1_ENGINE_DIR="~/.gtk-1.0/lib/gtk/themes/engines"
  else
    SMOOTH_GTK1_ENGINE_DIR="$libdir/gtk/themes/engines"
  fi

  AC_SUBST(SMOOTH_GTK1_ENGINE_DIR)
  AC_SUBST(SMOOTH_GTK1_CFLAGS)
  AC_SUBST(SMOOTH_GTK1_LIBS)
  BUILD_SUBDIRS="gtk1"
fi

if test $gtk_2 = "yes"; then
  PKG_CHECK_MODULES(SMOOTH_GTK2, gtk+-2.0 >= 2.0.0, ,
			AC_MSG_ERROR([GTK+-2.0 is required]))
  
  GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
  if test $local_install = "yes"; then
    SMOOTH_GTK2_ENGINE_DIR="~/.gtk-2.0/$GTK_VERSION/engines"
  else
    SMOOTH_GTK2_ENGINE_DIR="$libdir/gtk-2.0/$GTK_VERSION/engines"
  fi
  AC_SUBST(SMOOTH_GTK2_ENGINE_DIR)
  AC_SUBST(SMOOTH_GTK2_CFLAGS)
  AC_SUBST(SMOOTH_GTK2_LIBS)
  BUILD_SUBDIRS="$BUILD_SUBDIRS gtk2"
fi

if test $local_install = "yes"; then
  SMOOTH_GTK_THEMES_DIR="~/.themes"
else
  SMOOTH_GTK_THEMES_DIR="$datadir/themes/"
fi

AC_SUBST(SMOOTH_GTK_THEMES_DIR)

AC_SUBST(GTK_VERSION)
AC_SUBST(BUILD_SUBDIRS)

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_OUTPUT([
gtk2-smooth-engine.spec	\
Makefile \
gtk1/Makefile	\
gtk2/Makefile	\
themes/Makefile	\
themes/Delightfully-Smooth/Makefile	\
themes/Delightfully-Smooth/gtk1/Makefile	\
themes/Delightfully-Smooth/gtk2/Makefile
])
