# Process this file with autoconf to produce a configure script.
AC_INIT(thinice_theme_draw.c)
THEME="thinice"

# For automake.
VERSION=2.0.1
PACKAGE=gtk-${THEME}-engine

# Save this value here, since automake will set cflags later
cflags_set=${CFLAGS+set}
AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

dnl Initialize maintainer mode
AM_MAINTAINER_MODE

AC_CANONICAL_HOST

AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# No static please
AM_DISABLE_STATIC

dnl Initialize libtool
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(THINICE, gtk+-2.0 >= 2.0.0,,
			AC_MSG_ERROR([GTK+-2.0 is required to compile thinice]))

GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
AC_SUBST(THINICE_CFLAGS)
AC_SUBST(THINICE_LIBS)
AC_SUBST(GTK_VERSION)

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

#gtk-thinice-theme.spec
AC_OUTPUT([
Makefile
Theme/Makefile
Theme/gtk-2.0/Makefile
])
