
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(mgicchikn, 1.0.2)

AC_CANONICAL_HOST

AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL

AM_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_HEADER_STDC
AC_C_CONST

PKG_CHECK_MODULES(MGICCHIKN, gmodule-2.0 >= 1.3.12 gtk+-2.0 >= 1.3.12)

GTK_VERSION="`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`"
AC_SUBST(GTK_VERSION)

AC_PATH_PROG(GDK_PIXBUF_CSOURCE, gdk-pixbuf-csource)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(MGICCHIKN_LIBS)
AC_SUBST(MGICCHIKN_CFLAGS)

AC_OUTPUT([
Makefile
src/Makefile
themes/Makefile
themes/MagicChicken/Makefile
themes/MagicChicken/gtk-2.0/Makefile
themes/OkayishChicken/Makefile
themes/OkayishChicken/gtk-2.0/Makefile
themes/CortlandChicken/Makefile
themes/CortlandChicken/gtk-2.0/Makefile
])

