
imgdir = $(datadir)/eazel-engine

# Fucking automake; `make distcheck' fails if I do *.png below..
img_DATA = \
	arrow_down-spinner.png \
	arrow_down.png \
	arrow_left.png \
	arrow_right.png \
	arrow_up-spinner.png \
	arrow_up.png \
	check-active-default-focus.png \
	check-active-default.png \
	check-active-hilight-focus.png \
	check-active-hilight.png \
	check-active-insensitive.png \
	check-active-pressed-focus.png \
	check-active-pressed.png \
	check-default-focus.png \
	check-default.png \
	check-hilight-focus.png \
	check-hilight.png \
	check-insensitive.png \
	check-pressed-focus.png \
	check-pressed.png \
	progressbar.png \
	progressbar-left.png \
	progressbar-right.png \
	progressbar_trough.png \
	radio-active-default-focus.png \
	radio-active-default.png \
	radio-active-hilight-focus.png \
	radio-active-hilight.png \
	radio-active-insensitive.png \
	radio-active-pressed-focus.png \
	radio-active-pressed.png \
	radio-default-focus.png \
	radio-default.png \
	radio-hilight-focus.png \
	radio-hilight.png \
	radio-insensitive.png \
	radio-pressed-focus.png \
	radio-pressed.png \
	scroller-arrow-down-hilight.png \
	scroller-arrow-down-pressed.png \
	scroller-arrow-down.png \
	scroller-arrow-left-hilight.png \
	scroller-arrow-left-pressed.png \
	scroller-arrow-left.png \
	scroller-arrow-right-hilight.png \
	scroller-arrow-right-pressed.png \
	scroller-arrow-right.png \
	scroller-arrow-up-hilight.png \
	scroller-arrow-up-pressed.png \
	scroller-arrow-up.png \
	scroller-h-hilight.png \
	scroller-h-thumb-hilight.png \
	scroller-h-thumb.png \
	scroller-h-trough.png \
	scroller-h.png \
	scroller-v-hilight.png \
	scroller-v-thumb-hilight.png \
	scroller-v-thumb.png \
	scroller-v-trough.png \
	scroller-v.png \
	slider_h_thumb.png \
	slider_h_trough.png \
	slider_h_trough_focus.png \
	slider_v_thumb.png \
	slider_v_trough.png \
	slider_v_trough_focus.png \
	tab_left-unsel.png \
	tab_left.png \
	tab_right.png \
	tab_sel-bottom.png \
	tab_sel.png \
	tab_usel-bottom.png \
	tab_usel-bottom-left.png \
	tab_usel.png \
	tab_usel-left.png

EXTRA_DIST = $(img_DATA)
